new social media

--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
                     </div>
                     <div class="navbar-header page-scroll">
                         <ul class="list-inline top-nav-social-buttons">
-                            <li><a href="#">
+                            <!-- for when we have other social media stuff -->
+                            <!-- <li><a href="#">
                                 <i class="fa fa-google-plus"></i>
-                            </a></li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </a></li> -->
+                            <li><a href="https://www.facebook.com/groups/DongsanEM/" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="https://www.instagram.com/newhope_em/" target="_blank"><i class="fa fa-instagram"></i></a>
                             </li>
+                            <li><a href="mailto:newhopeenglishministry@gmail.com"><i class="fa fa-envelope"></i></a>
+                            </li>
+                            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li> -->
                         </ul>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -121,7 +126,7 @@
                             <div class="col-md-3"></div>
                             <div class="col-md-6 text-center text-muted mission-statement-body">
                                 <p class="large">
-                                    Our mission is the revelation of God&#39;s anointing within His people&#39;s past, present and future. Though we are sinners, God has granted us His grace, and thus we are reconciled with Him and with each other.
+                                    Our mission is to fully understand God&#39;s anointing through the past, present and future generations, collectively. Though we are sinners, God has granted us His grace, and thus we are reconciled with Him and with each other.
                                 </p>
                             </div>
                             <div class="col-md-3"></div>
@@ -178,7 +183,7 @@
                             <h4 class="subsection-heading">Join us!</h4>
                             <p class="text-muted large"><b>Sunday Service</b> Sunday 11am - 12pm</p>
                             <p class="text-muted large"><b>Bible Study</b> Sunday 1pm - 2pm</p>
-                            <p class="text-muted large"><b>Prayer &amp; Share</b> Wednesday 11am - 12pm</p>
+                            <p class="text-muted large"><b>Prayer &amp; Share</b> Wednesday 8pm - 9pm</p>
                         </div>
                         <div class="col-md-6">
                             <span class="fa-stack fa-4x">
@@ -239,14 +244,14 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jaesunhwang.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/jaesunhwang-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Jaesun Hwang</h4>
                                 <p class="text-muted">Lightning // Missions Director</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/pamelahwang.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/pamelahwang-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Pamela Hwang</h4>
                                 <p class="text-muted">Thunder // Operations Officer</p>
                             </div>
@@ -255,21 +260,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jessicakim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/jessicakim-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Jessica Kim</h4>
                                 <p class="text-muted">Lightning // Coordinator</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jamesyoon.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/jamesyoon-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>James Yoon</h4>
                                 <p class="text-muted">Lightning // Membership Care</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/hyunjinpark.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/hyunjinpark-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Hyunjin Park</h4>
                                 <p class="text-muted">Thunder // House and Design</p>
                             </div>
@@ -278,21 +283,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/matthewkim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/matthewkim-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Matthew Kim</h4>
                                 <p class="text-muted">Thunder // Worship Leader</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/peterchong.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/peterchong-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Peter Chong</h4>
                                 <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/minamin.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/minamin-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Mina Min</h4>
                                 <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
                             </div>
@@ -308,14 +313,14 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/minjuji.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/minjuji-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Minju Ji</h4>
                                 <p class="text-muted">Thunder // General Administration</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/youhyunkim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/youhyunkim-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Youhyun Kim</h4>
                                 <p class="text-muted">Media // Webmaster</p>
                             </div>
