port over stellar to parallax

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/agency.css" rel="stylesheet">
 
     <!-- Parallax CSS -->
-    <link href="css/stellar.css" rel="stylesheet">
+    <link href="css/parallax.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -112,10 +112,11 @@
                 </div>
             </header>
 
-            <section id="bg1" class="movingBackground">
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg1_low.jpg" data-android-fix="false" data-speed="0.3"></div>
+            <!--<section id="bg1" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
-            </section>
+            </section>-->
 
             <!-- Mission Statement Section -->
             <section id="mission-statement">
@@ -161,10 +162,11 @@
                 </div>
             </section>
 
-            <section id="bg2" class="movingBackground">
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg2_low.jpg" data-android-fix="false" data-speed="0.3"></div>
+            <!--<section id="bg2" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
-            </section>
+            </section>-->
 
             <!-- Service Information Section -->
             <section id="information">
@@ -200,10 +202,11 @@
                 </div>
             </section>
 
-            <section id="bg3" class="movingBackground">
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg3_low.jpg" data-android-fix="false" data-speed="0.3"></div>
+            <!--<section id="bg3" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
-            </section>
+            </section>-->
 
             <!-- Leadership O Section -->
             <section id="leadership" class="bg-light-gray">
@@ -329,10 +332,11 @@
                 </div>
             </section>
 
-            <section id="bg4" class="movingBackground">
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg4_low.jpg" data-android-fix="false" data-speed="0.3"></div>
+            <!--<section id="bg4" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
-            </section>
+            </section>-->
 
             <!-- Leadership Grid Section -->
             <!-- <section id="leadership" class="bg-light-gray">
@@ -872,10 +876,8 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
 
-    <!-- iScroll/Stellar -->
-    <script src="js/iscroll.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>    
-    <script src="js/stellarInit.js"></script>
+    <!-- parallax -->
+    <script src="js/parallax.js"></script>
 
 </body>
 
