moved stuff around

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Hope English Ministry</title>
+    <title>New Hope Ministry</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand page-scroll" href="#page-top">New Hope Ministries</a>
+                        <a class="navbar-brand page-scroll" href="#page-top">New Hope Ministry</a>
                     </div>
                     <div class="navbar-header page-scroll">
                         <ul class="list-inline top-nav-social-buttons">
@@ -105,14 +105,14 @@
             <header>
                 <div class="container">
                     <div class="intro-text">
-                        <div class="intro-lead-in">Do nothing from selfish ambition or conceit, but in humility count others more significant than yourselves. Let each of you look not only to his own interests, but also to the interests of others. <p>Philippians 2:3-4</p></div>
+                        <div class="intro-lead-in">So, whether you eat or drink, or whatever you do, do all to the glory of God.<p>1 Corinthians 10:31</p></div>
                         <div class="intro-heading">It&#39;s Nice To Meet You</div>
                         <a href="#mission-statement" class="page-scroll btn btn-xl">Explore</a>
                     </div>
                 </div>
             </header>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg1_low.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg1.jpg" data-speed="0.3"></div>
             <!--<section id="bg1" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
@@ -162,7 +162,7 @@
                 </div>
             </section>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg2_low.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg2.jpg" data-speed="0.3"></div>
             <!--<section id="bg2" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
@@ -202,7 +202,7 @@
                 </div>
             </section>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg3_low.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg3.jpg" data-speed="0.3"></div>
             <!--<section id="bg3" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
@@ -240,21 +240,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/paullee.png" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/paullee.jpg" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Paul Lee</h4>
                                 <p class="text-muted">Lightning // EM Pastor</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jaesunhwang-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/jaesunhwang.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Jaesun Hwang</h4>
                                 <p class="text-muted">Lightning // Missions Director</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/pamelahwang-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/pamelahwang.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Pamela Hwang</h4>
                                 <p class="text-muted">Thunder // Operations Officer</p>
                             </div>
@@ -263,21 +263,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jessicakim-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/jessicakim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Jessica Kim</h4>
                                 <p class="text-muted">Lightning // Coordinator</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jamesyoon-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/jamesyoon.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>James Yoon</h4>
                                 <p class="text-muted">Lightning // Membership Care</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/hyunjinpark-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/hyunjinpark.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Hyunjin Park</h4>
                                 <p class="text-muted">Thunder // House and Design</p>
                             </div>
@@ -286,21 +286,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/matthewkim-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/matthewkim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Matthew Kim</h4>
                                 <p class="text-muted">Thunder // Worship Leader</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/peterchong-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/peterchong.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Peter Chong</h4>
                                 <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/minamin-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/minamin.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Mina Min</h4>
                                 <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
                             </div>
@@ -316,14 +316,14 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/minjuji-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/minjuji.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Minju Ji</h4>
                                 <p class="text-muted">Thunder // General Administration</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/youhyunkim-low.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <img src="img/bios/youhyunkim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Youhyun Kim</h4>
                                 <p class="text-muted">Media // Webmaster</p>
                             </div>
@@ -332,7 +332,7 @@
                 </div>
             </section>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg4_low.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg4.jpg" data-speed="0.3"></div>
             <!--<section id="bg4" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
