--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </header>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg1.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg1.JPG" data-speed="0.3"></div>
             <!--<section id="bg1" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
@@ -162,7 +162,7 @@
                 </div>
             </section>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg2.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg2.JPG" data-speed="0.3"></div>
             <!--<section id="bg2" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
@@ -202,7 +202,7 @@
                 </div>
             </section>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg3.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg3.JPG" data-speed="0.3"></div>
             <!--<section id="bg3" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
@@ -332,7 +332,7 @@
                 </div>
             </section>
 
-            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg4.jpg" data-speed="0.3"></div>
+            <div class="parallax-window" data-parallax="scroll" data-image-src="img/background/bg4.JPG" data-speed="0.3"></div>
             <!--<section id="bg4" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
