--- a/index.html
+++ b/index.html
@@ -329,6 +329,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/paulyoo.jpg" class="img-responsive img-circle" alt="" height=250 width=250>
+                                <h4>Paul Yoo</h4>
+                                <p class="text-muted">Thunder // Liturgy Coordinator</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
